# hazel-kernel

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.c
.github/workflows/: cmake-single-platform.yml
boot/grub/: grub.cfg
include/: elf.h  util.h
include/arch/i686/: gdt.h  interrupts.h  io.h  timer.h  uart.h
init-mod/: CMakeLists.txt  main.c
src/: Kernel.cpp  Kernel.h  allocator.c  elf.h  kernel.h  kmain.c  printf.c  printf.cpp  printf.h  process.c  process.h  util.h
src/arch/i686/: allocator.c  allocator.h  bootstrap.c  bootstrap.cpp  exception.c  exception.h  gdt.h  heap.c  heap.h  i686.cmake  interrupts.c  interrupts.h  io.c  io.cpp  io.h  linker.ld  multiboot.S  pic.c  pic.h  pit.c  start.S  syscall.c  syscall.h  timer.h  uart.c  uart.cpp  uart.h  user.c  user.h  vga.c  vga.h
